src/objects/CPF_Lease_Fund__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <fields>
        <fullName>API_Key__c</fullName>
        <label>API Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_Username__c</fullName>
        <label>API Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Authorized_Signer__c</fullName>
        <label>Authorized Signer</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Endpoint__c</fullName>
        <label>Endpoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prepaid_Template_Id__c</fullName>
        <label>Prepaid Template Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quick_Template_Id__c</fullName>
        <label>Quick Template Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>CPF Lease Fund</label>
</CustomObject>